2011-03-30 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service-novellvpn-helper.c:
	* src/nm-novellvpn-service.c:
	* properties/nm-novellvpn.c:
	* auth-dialog/profile.c:
	replace nm_warning/nm_info usage with g_warning/g_message
	* properties/nm-novellvpn-propertiesui.c:
	* properties/nm-novellvpn-propertiesui.h:
	* properties/nm-novellvpn-vpnui-impl.c:
	delete the unused files.
	* po/POTFILES.in:
	Fix to not include files not existing in the tarball.
	* properties/nm-novellvpn.c:
	Fix build for NM 0.8.2.
2010-07-16 Bin Li <bili@novell.com>
	* configure.in:
	Bump version to 0.8 for build with NetworkManager 0.8.
2010-03-21 Bin Li <bili@novell.com>
	* properties/nm-novellvpn.c:
	Save the password for system connection(bnc#582539).
2010-01-08 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c:
	Use the dhgroup and pfsgroup default value when not set in advanced
	dialog(bnc#568534).
2009-11-10 Bin Li <bili@novell.com>
	Move from novell forge svn to google svn.
2009-06-26 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c:
	Fix nm-novellvpn-service segfaults when auth-type is null(bnc#501835).
2009-03-25 Bin Li <bili@novell.com>
	* properties/nm-novellvpn.c:
	* properties/nm-novellvpn-dialog.glade:
	Add advanced dialog for optional parameters.
2009-03-12 Bin Li <bili@novell.com>
	* properties/import-export.c:
	* properties/import-export.h:
	* properties/Makefile.am:
	* properties/nm-novellvpn.c:
	Support the import and export features for nvpn and vpnlogin.
2009-01-22 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.h:
	* src/nm-novellvpn-service.c:
	* properties/nm-novellvpn.c:
	* properties/nm-novellvpn-dialog.glade:
	Support the "Disable split tunnel" features.
2009-01-09 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service-novellvpn-helper.c:
	Dismiss compile warning and delete unused functions.
	* src/Makefile.am:
	* src/nm-utils.c:
	* src/nm-utils.h:
	Delete the nm-utils related file, use NM's library.
2009-01-08 Bin Li <bili@novell.com>