@@ -1,7 +1,7 @@
 noinst_LTLIBRARIES=libnm-novellvpn-common-gnome.la
 
 libnm_novellvpn_common_gnome_la_CPPFLAGS = \
-				      $(NETWORK_MANAGER_CFLAGS) \
+				      $(NM_CFLAGS) \
 				      $(GLIB_CFLAGS) \
 				      $(GNOMEKEYRING_CFLAGS) \
 				      -DG_DISABLE_DEPRECATED
@@ -11,6 +11,6 @@ libnm_novellvpn_common_gnome_la_SOURCES= \
 				    keyring-helpers.h
 
 libnm_novellvpn_common_gnome_la_LIBADD = \
-				    $(NETWORK_MANAGER_LIBS) \
+				    $(NM_LIBS) \
 				    $(GLIB_LIBS) \
 				    $(GNOMEKEYRING_LIBS)
