@@ -55,9 +55,9 @@ PKG_CHECK_MODULES(DBUS, dbus-glib-1 >= 0.30)
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
-PKG_CHECK_MODULES(NETWORK_MANAGER, NetworkManager >= 0.8 libnm-util >= 0.8 libnm-glib libnm-glib-vpn)
-AC_SUBST(NETWORK_MANAGER_CFLAGS)
-AC_SUBST(NETWORK_MANAGER_LIBS)
+PKG_CHECK_MODULES(NM, NetworkManager >= 0.8 libnm-util >= 0.8 libnm-glib libnm-glib-vpn)
+AC_SUBST(NM_CFLAGS)
+AC_SUBST(NM_LIBS)
 
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.6)
 AC_SUBST(GTK_CFLAGS)
